--- a/cultura.html
+++ b/cultura.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="home.html">HOME</a>
                         </li>
                         <li>
                             <a href="#cultura">CULTURA</a>
@@ -120,4 +120,4 @@
     </div>
 </body>
 
-</html>>
+</html>
