--- a/culinaria.html
+++ b/culinaria.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="home.html">HOME</a>
                         </li>
                         <li>
                             <a href="cultura.html">CULTURA</a>
@@ -46,7 +46,7 @@
         <div class="divider" id="culinaria"></div>
         <main>
             <h1 id="inicio">Culinária</h1>
-            <img id="Conheça-o-mexico" src="./assets/cultura.jpg" alt="economia méxico"">
+            <img id="Conheça-o-mexico" src="./assets/culinaria.jpg" alt="economia méxico"">
             <p class=" italico">A culinária mexicana é uma fusão de tradições indígenas e influências espanholas,
             conhecida por sua diversidade e uso de ingredientes como milho, feijão, pimentas, abacate e tomate.</p>
 
@@ -83,7 +83,7 @@
                         misturada a ovos mexidos, consumida, geralmente, acompanhada por tortillas de farinha de trigo.
                     </p>
 
-                    <img id="mapa-mexico" src="./assets/Religiao.png" alt=" Machaca e chilorio">
+                    <img id="mapa-mexico" src="./assets/machaca-e-chilorio.jpg" alt=" Machaca e chilorio">
                 </div>
             </section>
 
@@ -99,7 +99,7 @@
                         Ela é assada enrolada em folhas de bananeira e em fornos montados em buracos, chamados de
                         pibiles. Daí o nome da receita.</p>
 
-                    <img id="mapa-mexico" src="./assets/musica.jpg" alt=" Cochinita pibil">
+                    <img id="mapa-mexico" src="./assets/cochinita-pibil.jpg" alt=" Cochinita pibil">
                 </div>
             </section>
 
@@ -113,7 +113,7 @@
                         nacho, aquele petisco mexicano sequinho à base de milho e com ajuda de uma colher. Prático e
                         delicioso.</p>
 
-                    <img id="mapa-mexico" src="./assets/custumes.jpg" alt=" Chili com carne">
+                    <img id="mapa-mexico" src="./assets/chili-com-carne.jpg" alt=" Chili com carne">
                 </div>
             </section>
 
@@ -127,7 +127,7 @@
                         Pode ser servida dobrada ou mesmo aberta, com o recheio caprichado entre o queijo e o pãozinho.
                         A que você vê na foto tem frango.</p>
 
-                    <img id="mapa-mexico" src="./assets/custumes.jpg" alt="Quesadilla">
+                    <img id="mapa-mexico" src="./assets/quesadilla.jpg" alt="Quesadilla">
                 </div>
             </section>
 
@@ -140,7 +140,7 @@
                         O prato se parece com um purê de avocado (abacate), que leva limão, vinagre, sal, coentro e pimenta, podendo ainda ser complementado com pimentões e cebola roxa.
                         Ele é consumido com nachos, como o chili, ou usado no recheio de tortillas. Também pode aparecer acompanhando outros pratos típicos: não se espante.</p>
 
-                    <img id="mapa-mexico" src="./assets/custumes.jpg" alt="Guacamole">
+                    <img id="mapa-mexico" src="./assets/guacamole.jpg" alt="Guacamole">
                 </div>
             </section>
 
