--- a/economia.html
+++ b/economia.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href="index.html">HOME</a>
+                            <a href="home.html">HOME</a>
                         </li>
                         <li>
                             <a href="cultura.html">CULTURA</a>
