--- a/login.html
+++ b/login.html
@@ -19,9 +19,9 @@
 
         <div id="page">
             <header>
-                <h1>Cadastro:</h1>
+                <h1>Acesse sua conta:</h1>
             </header>
-            <button > <a href="login.html"></a>Entrar</button>
+            <button> <a href="index.html"></a>Criar</button>
             <div id="cor_de_fundo">
                 <main>
                     <form action="">
@@ -33,10 +33,6 @@
                                 <input type="text" placeholder="Digite seu nome..." id="nome...">
                             </div>
 
-                            <div>
-                                <label for="">CPF:</label>
-                                <input type="number" placeholder="Digite seu CPF..." id="cpf">
-                            </div>
 
                             <div>
                                 <label for="email">E-mail:</label>
@@ -49,16 +45,8 @@
                                     maxlength="10" minlength="6">
                             </div>
 
-                            <div>
-                                <label for="foto">Foto de Perfil</label>
-                                <input type="file" id="foto" accept="jpg, png, jpeg, svg" required>
-                            </div>
 
-                            <div>
-                                <label for="nascimento">Data de Nascimento</label>
-                                <input type="date" id="nascimento" max="2014-12-31" required>
-                            </div>
-                            <button><a href="login.html" class="botao">Criar</a></button> 
+                            <button><a href="home.html" class="botao">Entrar</a></button> 
             </div>
             </fieldset>
 
