--- a/cultura.html
+++ b/cultura.html
@@ -35,7 +35,7 @@
                             <a href="economia.html">ECONOMIA</a>
                         </li>
                         <li>
-                            <a href="#quiz">QUIZ</a>
+                            <a href="quiz.html">QUIZ</a>
                         </li>
                     </ul>
                 </nav>
